Backport to ranger-2.10: JDK8-compatible OpenSearchUtilTest